--- a/main.html
+++ b/main.html
@@ -139,7 +139,7 @@
   </h1>
 </div></div>
 </div>
-   
+  <div>HELLO WORLD</div>
 <!-- modal sign up -->
 <div class="modal fade" id="modalRegisterForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true">
