--- a/main.html
+++ b/main.html
@@ -66,6 +66,7 @@
   <!-- Home part -->
   <div class="HOME">
   <!-- slide -->
+  <div class="wow fadeInTopLeft">
   <div id="carouselCaptions" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselCaptions" data-slide-to="0" class="active"></li>
@@ -106,12 +107,12 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-</div>
+</div></div>
  
-<a href="accounting-instruction-reference-100.pdf">Click</a>
+
 
 <!-- Cards -->
-<div class="cards">
+<div class="cards wow fadeInLeftBig">
 <div class="container-fluid">
   <div class="card-group">
     <div class="card" >
@@ -221,7 +222,7 @@
 
 <!-- Genre -->
 <div class="GENRE">
-  <div class="container-fluid">
+  <div class="container-fluid wow fadeInLeftBig">
     <form>
       <input type="search" name="q" placeholder="Name of Book" id="search" style="border-radius: 50px;"> 
       <button class="btn btn-dark">Find</button>
@@ -230,7 +231,7 @@
 
   <div class="container-fluid">
     <div class="card-deck">
-      <div class="card">
+      <div class="card wow fadeInLeftBig">
         <img class="card-img-top" src="assets/style/images/tale.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Tales</h5>
@@ -266,7 +267,7 @@
 
 
 <!-- ddd -->
-      <div class="card">
+      <div class="card wow fadeInUp">
         <img class="card-img-top" src="assets/style/images/drama.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Drama</h5>
@@ -300,7 +301,7 @@
       <!-- End -->
 
 
-      <div class="card">
+      <div class="card wow fadeInRightBig">
         <img class="card-img-top" src="assets/style/images/romance.jfif" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Romance</h5>
@@ -336,7 +337,7 @@
 
   <!-- end modal -->
   <div class="card-deck">
-    <div class="card">
+    <div class="card wow fadeInLeftBig">
       <img class="card-img-top" src="assets/style/images/fantasy.jpg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Fantasy</h5>
@@ -370,7 +371,7 @@
 
 <!-- End -->
 
-    <div class="card">
+    <div class="card wow fadeInUp">
       <img class="card-img-top" src="assets/style/images/scifi.jpg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Scientific fiction</h5>
@@ -404,7 +405,7 @@
 <!-- End -->
 
 
-    <div class="card">
+    <div class="card wow fadeInRightBig">
       <img class="card-img-top" src="assets/style/images/suspense.png" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Thriller and suspense</h5>
@@ -438,7 +439,7 @@
 
 
   <div class="card-deck">
-    <div class="card">
+    <div class="card wow fadeInLeftBig">
       <img class="card-img-top" src="assets/style/images/short stories.png" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Short stories</h5>
@@ -469,7 +470,7 @@
 
     <!-- End -->
 
-    <div class="card">
+    <div class="card wow fadeInUp">
       <img class="card-img-top" src="assets/style/images/action.jpeg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Action and adventure</h5>
@@ -500,7 +501,7 @@
     <!-- End -->
 
 
-    <div class="card">
+    <div class="card wow fadeInRightBig">
       <img class="card-img-top" src="assets/style/images/Horror-Books-Hero.jpg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Horror</h5>
